--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Correo": {
+    "SmtpServer": "smtp.example.com",
+    "SmtpPort": 587,
+    "SmtpUsername": "chatbotuda@gmail.com",
+    "SmtpPassword": "ChatBotUda2023%"
+  },
   "AllowedHosts": "*"
 }
