--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -11,5 +11,8 @@
     "SmtpUsername": "chatbotuda@gmail.com",
     "SmtpPassword": "ChatBotUda2023%"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TicketConnection": "Agregar string de conexion acá"
+  }
 }
