subiendo arreglos de dependencias

--- a/webapi/appsettings.json
+++ b/webapi/appsettings.json
@@ -13,6 +13,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TicketConnection": "Agregar string de conexion acá"
+    "TicketConnection": "Data Source=DESKTOP-4EHJRD6/tomia;Initial Catalog=TicketSystem;Integrated Security=True;Trusted_Connection=True;"
   }
 }
